# flux-lint

./: .gitignore  Cargo.toml
.github/workflows/: lint.yml
docs/: ARCHITECTURE.md
src/: main.rs
src/analysis/: analyzer.rs  engine.rs  languages.rs  mod.rs  python_analyzer.rs  rust_analyzer.rs  walker.rs
src/analysis/rules/: mod.rs
src/analysis/rules/python/: bloat.rs  complexity.rs  hygiene.rs  mod.rs  naming.rs
src/analysis/rules/rust/: bloat.rs  complexity.rs  hygiene.rs  mod.rs  naming.rs
src/core/: config.rs  rules.rs
src/reporting/: console.rs  json.rs  mod.rs
