[package]
name = "audit"
version = "0.1.0"
edition = "2021"
authors = ["Raul"]
description = "Analizador micro de proyectos: smells y podredumbre estructural"

[dependencies]
# CLI & Configuration
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0.18"

# Parallelism & File System
rayon = "1.8"
ignore = "0.4"

# Parsing Core
tree-sitter = "0.26.3"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"

# UX / Terminal
colored = "3.1.1"
comfy-table = "7.1"

[dev-dependencies]
pretty_assertions = "1.4"